接下来inline图片的压缩

--- a/gulp/config.json
+++ b/gulp/config.json
@@ -1,6 +1,11 @@
 {
+	"debug": true,
 	"sourcePath": "./src",
-	"releasePath": "./build",
+	"outputPath": "./build",
 	"cachePath": "./.cache",
-	"compileName": "**/.compile.js"
+	"compileName": "**/.compile.js",
+	"shortMaps": {
+		"module": "modules/",
+		"layout": "layout/"
+	}
 }
