--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   "author": "xuxufei@2144.cn",
   "license": "MIT",
   "dependencies": {
+    "datauri": "^1.0.5",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean-css": "^3.9.1",
+    "gulp-filter": "^5.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-remote-src": "^0.4.3",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.7.0",
     "lodash": "^4.17.4",
     "md5-file": "^3.2.3",
+    "placeholders": "^1.0.0",
+    "swig": "^1.4.2",
     "through2": "^2.0.3"
   }
 }
