--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/ystrdy/femt/issues"
   },
   "homepage": "https://github.com/ystrdy/femt#readme",
-  "dependencies": {
+  "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.9.0",
     "eslint-config-alloy": "^1.4.2",
@@ -32,5 +32,12 @@
     "rimraf": "^2.6.2",
     "typescript": "^3.1.1",
     "typescript-eslint-parser": "^21.0.2"
+  },
+  "dependencies": {
+    "@types/node": "^10.12.12",
+    "fis3": "^3.4.41",
+    "minimist": "^1.2.0",
+    "mockjs": "^1.0.1-beta3",
+    "nunjucks": "^3.1.6"
   }
 }
