--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   "dependencies": {
     "@types/node": "^10.12.12",
     "fis3": "^3.4.41",
-    "minimist": "^1.2.0",
     "mockjs": "^1.0.1-beta3",
-    "nunjucks": "^3.1.6"
+    "nunjucks": "^3.1.6",
+    "postcss": "^7.0.7",
+    "postcss-scss": "^2.0.0",
+    "precss": "^4.0.0"
   }
 }
