--- a/example/package.json
+++ b/example/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "start": "fis3 release -f ../dist/fis-conf.dev.js -r ./ -wL",
-    "build": "npm run clean && fis3 release -f ../dist/fis-conf.dev.js -r ./",
-    "clean": "rimraf ./build & fis3 release -c"
+    "build": "npm run clean && fis3 release -f ../dist/fis-conf.dev.js -r ./ -d ./build",
+    "clean": "rimraf ./build ./cache"
   },
   "dependencies": {
     "@types/jquery": "^1.10.34",
@@ -11,12 +11,14 @@
     "blueimp-md5": "^2.10.0",
     "console-polyfill": "^0.3.0",
     "es6-promise": "^4.2.5",
+    "femt": "^1.0.11",
     "html-entities": "^1.2.1",
     "jcarousel": "^0.3.8",
     "jquery": "^1.12.4",
     "json-fallback": "0.0.1",
     "knuth-shuffle": "^1.0.8",
     "nanoscroller": "^0.8.7",
+    "postcss": "^7.0.7",
     "qrcodejs2": "0.0.2",
     "querystringify": "^2.1.0",
     "scriptjs": "^2.5.9",
@@ -25,7 +27,6 @@
     "tiny-emitter": "^2.0.2"
   },
   "devDependencies": {
-    "fis3": "^3.4.40",
     "rimraf": "^2.6.2"
   }
 }
