--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# .env
 
 # local history plugin file
 .history
@@ -131,3 +131,5 @@ package-lock.json
 dist
 
 build/
+
+cache/
