--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "tsc --watch",
     "lint": "eslint src --ext .ts",
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "server": "http-server -c-1 ."
   },
   "husky": {
     "hooks": {
@@ -28,6 +29,7 @@
     "eslint": "^5.9.0",
     "eslint-config-alloy": "^1.4.2",
     "eslint-plugin-typescript": "^0.14.0",
+    "http-server": "^0.11.1",
     "husky": "^1.2.0",
     "rimraf": "^2.6.2",
     "typescript": "^3.1.1",
@@ -35,11 +37,18 @@
   },
   "dependencies": {
     "@types/node": "^10.12.12",
-    "fis3": "^3.4.41",
+    "autoprefixer": "^9.4.4",
+    "cssgrace": "^3.0.0",
+    "dotenv": "^6.2.0",
+    "fis3-hook-relative": "^2.0.3",
     "mockjs": "^1.0.1-beta3",
     "nunjucks": "^3.1.6",
+    "pify": "^4.0.1",
     "postcss": "^7.0.7",
+    "postcss-automath": "^1.0.1",
+    "postcss-import": "^12.0.1",
     "postcss-scss": "^2.0.0",
-    "precss": "^4.0.0"
+    "precss": "^4.0.0",
+    "rucksack-css": "^1.0.2"
   }
 }
